<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/inventory_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            tools:text="@string/pixel"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dollar"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/inventory_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                tools:text="649"/>

            <TextView
                android:id="@+id/inventory_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp"
                tools:text="10"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/track_item_button"
                style="@style/ButtonStyle"
                android:text="@string/track"/>

            <Button
                android:id="@+id/sale_item_button"
                style="@style/ButtonStyle"
                android:text="@string/sale"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>