<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.snehpandya.inventory.ItemDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/inventory_item_name_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:textSize="24sp"
            tools:text="@string/pixel"/>

        <ImageView
            android:id="@+id/inventory_item_image_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.05"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/dollar"/>

            <TextView
                android:id="@+id/inventory_item_price_text_view"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                tools:text="649"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/inventory_item_increment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add"/>

            <TextView
                android:id="@+id/inventory_item_quantity_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp"
                tools:text="1"/>

            <Button
                android:id="@+id/inventory_item_decrement"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/remove"/>
        </LinearLayout>

        <Button
            android:id="@+id/inventory_item_order_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:text="@string/order_item"/>
    </LinearLayout>
</LinearLayout>
